--- a/SourceCode/CardIdleRemastered/Views/CardIdlePage.xaml
+++ b/SourceCode/CardIdleRemastered/Views/CardIdlePage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CardIdleRemastered.Views.CardIdlePage"
+<UserControl x:Class="CardIdleRemastered.Views.CardIdlePage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,9 +6,10 @@
              xmlns:res="clr-namespace:CardIdleRemastered.Properties"
              xmlns:local="clr-namespace:CardIdleRemastered"
              Background="{DynamicResource DarkTheme}"
+             Opacity="0.8"
              mc:Ignorable="d" 
              d:DesignHeight="480" d:DesignWidth="640"
-             d:DataContext="{d:DesignInstance Type=local:AccountModel, IsDesignTimeCreatable=True}">
+             d:DataContext="{d:DesignInstance Type=local:AccountModel, IsDesignTimeCreatable=False}">
 
     <UserControl.Resources>
         <ResourceDictionary>
@@ -24,7 +25,7 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <Grid  Margin="0,20,0,0">
+        <Grid Margin="0,20,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="3*"/>
@@ -47,11 +48,11 @@
                        Stretch="UniformToFill"/>
             </Border>
 
-            <StackPanel Grid.Column="1" HorizontalAlignment="Center">
+            <StackPanel Grid.Column="1" HorizontalAlignment="Left">
 
                 <Label Content="{Binding Path=UserName, FallbackValue='Card Idle'}"  
                        VerticalAlignment="Top"
-                       HorizontalAlignment="Center"
+                       HorizontalAlignment="Left"
                        Padding="5,0,5,5"
                        FontSize="24" Foreground="White"/>
 
@@ -84,14 +85,16 @@
                        ToolTip="{Binding Path=BadgeTitle}"/>
             </StackPanel>
 
-            <Label Grid.Row="1" Grid.Column="1"  
+            <Label Grid.Row="1" Grid.ColumnSpan="3"  
                    Content="{Binding MessageTitle, FallbackValue='How to Help Card Idle'}" 
                    HorizontalAlignment="Center"
+                   Visibility="{Binding Path=HasItems, ElementName=ListLines, Converter={StaticResource BoolToVisible}}"
                    FontSize="24" Foreground="{DynamicResource DynStatsHeaders}"/>
         </Grid>
 
         <ItemsControl Grid.Row="1" 
                       Margin="25,0"
+                      Name="ListLines"
                       ItemsSource="{Binding MessageLines}" 
                       TextElement.Foreground="White">
 
