--- a/SourceCode/CardIdleRemastered/Views/ShowcasesPage.xaml
+++ b/SourceCode/CardIdleRemastered/Views/ShowcasesPage.xaml
@@ -93,7 +93,7 @@
                 <Label Content="{x:Static res:Resources.ToolSearch}" Foreground="White"/>
                 <TextBox Text="{Binding Path=ShowcaseTitle, Delay=400, UpdateSourceTrigger=PropertyChanged}"
                          MinWidth="100" Padding="5,0,5,0"
-                         VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Margin="0,0,5,0"/>
+                         VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
             </StackPanel>
 
             <views:SearchPopup DockPanel.Dock="Left"
