--- a/SourceCode/CardIdleRemastered/Themes/SharedResources.xaml
+++ b/SourceCode/CardIdleRemastered/Themes/SharedResources.xaml
@@ -139,6 +139,18 @@
         </Grid>
     </DataTemplate>
 
+    <DataTemplate x:Key="PriceCell" DataType="{x:Type local:BadgeIdentity}">
+        <StackPanel VerticalAlignment="Center">
+            <TextBlock Text="{Binding Path=BadgePrice, StringFormat='\{0:0.00}'}"
+                       Foreground="Black"
+                       TextAlignment="Center" Margin="3"/>
+            <TextBlock Text="{Binding Path=CardPrice, StringFormat='\{0:0.00}'}"
+                       Foreground="Black"
+                       TextAlignment="Center" Margin="3"/>
+        </StackPanel>
+    </DataTemplate>
+
+
     <DataTemplate x:Key="BadgeImageTile" DataType="{x:Type local:BadgeLevelData}">
         <Grid Margin="2,2,2,0">
             <Grid.Style>
