--- a/SourceCode/CardIdleRemastered/Views/BadgesPage.xaml
+++ b/SourceCode/CardIdleRemastered/Views/BadgesPage.xaml
@@ -51,7 +51,6 @@
                     </Border.InputBindings>
                 </Border>
             </DataTemplate>
-
             <DataTemplate x:Key="IdleCell" DataType="{x:Type local:BadgeModel}">
                 <StackPanel Orientation="Vertical" VerticalAlignment="Center">
                     <Button Command="{Binding Path=DataContext.StartBadgeIdleCmd, ElementName=LayoutRoot}"
@@ -112,7 +111,10 @@
                   CellStyle="{StaticResource GameCellStyle}"
                   LoadingRow="SetLoadingRowNumber">
             <DataGrid.Columns>
-                <DataGridTemplateColumn Header="{x:Static res:Resources.Game}"
+                <DataGridTemplateColumn 
+                    Header="{x:Static res:Resources.Game}"
+                    SortMemberPath="Title"
+                    CanUserResize="False"
                     CellTemplate="{StaticResource GameImgCell}"
                     Width="Auto" MinWidth="230"/>
                 <DataGridTextColumn
@@ -123,11 +125,14 @@
                     Header="{x:Static res:Resources.Cards}" Binding="{Binding Path=RemainingCard}"
                     IsReadOnly="True"
                     Width="*" ElementStyle="{StaticResource DataGridText}"/>
-                <DataGridTextColumn
-                    Header="$" Binding="{Binding Path=CardPrice, StringFormat='\{0:0.00}'}"
-                    IsReadOnly="True"
-                    Width="40" ElementStyle="{StaticResource DataGridText}"/>
-                <DataGridTemplateColumn Header="{x:Static res:Resources.BadgeProgress}"
+                <DataGridTemplateColumn 
+                    Header="$"
+                    SortMemberPath="BadgePrice"
+                    CellTemplate="{StaticResource PriceCell}"
+                    Width="55"/>
+                <DataGridTemplateColumn
+                    Header="{x:Static res:Resources.BadgeProgress}"
+                    SortMemberPath="BadgeProgressPercentage"
                     CellTemplate="{StaticResource ProgressCell}"
                     Width="*"/>
                 <DataGridTemplateColumn Header="{x:Static res:Resources.Idle}" CellTemplate="{StaticResource IdleCell}" Width="*"/>
