--- a/SourceCode/CardIdleRemastered/Views/QueuePage.xaml
+++ b/SourceCode/CardIdleRemastered/Views/QueuePage.xaml
@@ -39,10 +39,10 @@
                     Header="{x:Static res:Resources.Cards}" Binding="{Binding Path=RemainingCard}"
                     IsReadOnly="True" CanUserSort="False"
                     Width="*" ElementStyle="{StaticResource DataGridText}"/>
-                <DataGridTextColumn
-                    Header="$" Binding="{Binding Path=CardPrice, StringFormat='\{0:0.00}'}"
-                    IsReadOnly="True" CanUserSort="False"
-                    Width="40" ElementStyle="{StaticResource DataGridText}"/>
+                <DataGridTemplateColumn 
+                    Header="$"
+                    CellTemplate="{StaticResource PriceCell}"
+                    Width="55"/>
                 <DataGridTemplateColumn Header="{x:Static res:Resources.Priority}" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
